# mpds

./: LICENSE  README.md
LiveVideoApp/: .gitignore  README.md  build.gradle  settings.gradle
LiveVideoApp/Android-PickerView-library/: build.gradle  settings.gradle
LiveVideoApp/basemvp/: build.gradle
LiveVideoApp/key/: signkey.txt
LiveVideoApp/lfilepickerlibrary/: build.gradle
LiveVideoApp/mp3Record/: build.gradle
LiveVideoApp/ptt/: build.gradle  proguard-rules.pro
LiveVideoSDK/: UpgradeLog.htm  UpgradeLog2.htm  VIMS_New.sln
LiveVideoSDK/VIMS.Cms/: GRGcms.sln
LiveVideoSDK/VIMS.Cms/DataBase/: pmessage.sql
LiveVideoSDK/VIMS.Cms/GRGcms.API/: GRGcms.API.csproj
LiveVideoSDK/VIMS.Cms/GRGcms.BLL/: GRGcms.BLL.csproj  appversion.cs  casemessage.cs  dept.cs  group.cs  group_user.cs  log.cs  menu.cs  (+6 more)
LiveVideoSDK/VIMS.Log.Web/: Global.asax  Global.asax.cs  VIMS.Log.Web.csproj  packages.config
LiveVideoSDK/VIMS.Web/: Global.asax.cs  VIMS.Web.csproj  Web.config.mine  log4net.config  packages.config
LiveVideoSDK/db_init/: dbcreate.sql  init_data.sql  init_fun.sql  说明.txt
MQService/: .classpath  .project
MQService/conf/: db.properties  log4j.properties  system.properties
VideoServer/: Freeswitch.2015.sln  freeswitch-config-rayo.spec  freeswitch.spec
VideoServer/Win32/: del_pdb.bat
VideoServer/src/: switch.c  switch_core_media.c  switch_rtp.c
VideoServer/src/mod/endpoints/mod_pdt/: Makefile.am  im_api.c  im_api.h  mod_pdt.2015.vcxproj  mod_pdt.c  mod_pdt.h  pdt_api.c  pdt_api.h  pdt_cmd.c  pdt_event.c
VideoServer/w32/: openssl-version.props
(+853 files in other folders)
